--- a/HackathonGAmechangers/main_app/static/css/style.css
+++ b/HackathonGAmechangers/main_app/static/css/style.css
@@ -1,3 +1,11 @@
-body{
+body {
+
+    
+}
+nav {
+    height: 100px;
+    line-height: 100px;
+    font-size: large;
+    font-family: 'Teko', sans-serif; 
     
 }
