--- a/HackathonGAmechangers/main_app/templates/base.html
+++ b/HackathonGAmechangers/main_app/templates/base.html
@@ -9,31 +9,27 @@
     <title>Texas Street Art</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Teko&display=swap" rel="stylesheet"> 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </head>
 <body>
-    <header>
-      <nav>
-            <div class="nav-wrapper">
-                    <!-- changes below -->
-                    <a href="#" class="brand-logo"> Logo</a>
-                    {% if user.is_authenticated %}
-                    <li><a href="{% url 'profile' %}">profile</a></li>
-                    <li><a href="{% url 'logout' %} ">logout</a></li>
-                    {% else %}
-                      <ul id ="nav-mobile" class="right hide-on-med-and-down">
-                      <li><a href="{% url 'login' %}">Log In</a></li>
-                      <li><a href="{% url 'index' %}">Scenes</a></li>
-                      <li><a href="{% url 'scenes_create' %}">Create</a></li>
-                      </ul>
-                    {% endif %}
-            </div>
-        </nav>
-
-            
-   
-    </header>
+    
+        <nav class="nav-wraper black">
+                <!-- changes below -->
+                <a href="#" class="brand-logo"> AUSTIN STREET SCENES</a>
+                {% if user.is_authenticated %}
+                <li><a href="{% url 'profile' %}">profile</a></li>
+                <li><a href="{% url 'logout' %} ">logout</a></li>
+                {% else %}
+                  <ul id ="nav-mobile" class="right hide-on-med-and-down">
+                  <li><a href="{% url 'login' %}">Log In</a></li>
+                  <li><a href="{% url 'index' %}">Scenes</a></li>
+                  <li><a href="{% url 'scenes_create' %}">Create</a></li>
+                  </ul>
+                {% endif %}
+            </nav>
+    
     <main>
         {% block content %}
         {% endblock %}
