--- a/HackathonGAmechangers/main_app/templates/scenes/index.html
+++ b/HackathonGAmechangers/main_app/templates/scenes/index.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Scene List</h1>
 
 
 {% for scene in scenes %}
+    {% for photo in scene.photo_set.all %}
+      <img class="responsive-img card-panel" src="{{photo.url}}">
+    {% empty %}
+      <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+    {% endfor %}
     <div class="card">
             <a href="{% url 'detail' scene.id %}">
             <div class="card-content">
