font styling and layout

--- a/HackathonGAmechangers/main_app/static/css/style.css
+++ b/HackathonGAmechangers/main_app/static/css/style.css
@@ -3,6 +3,20 @@ body {
     
 }
 
+.card {
+    font-family: 'Raleway', sans-serif;
+    
+}
+.card-content {
+    color: Black;
+    
+
+}
+#card-title {
+    font-weight: bold;
+}
+
+
 html {
 
     font-size: 17px;
