--- a/HackathonGAmechangers/main_app/templates/base.html
+++ b/HackathonGAmechangers/main_app/templates/base.html
@@ -9,7 +9,8 @@
     <title>Texas Street Art</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link href="https://fonts.googleapis.com/css?family=Teko&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Teko&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </head>
@@ -34,6 +35,6 @@
         {% block content %}
         {% endblock %}
     </main>
-    <footer>COPYRIGHT &copy; 2019</footer>
+    <footer>COPYRIGHT AUSTIN STREET SCENES &copy; 2019</footer>
 </body>
 </html>
