--- a/HackathonGAmechangers/main_app/templates/scenes/index.html
+++ b/HackathonGAmechangers/main_app/templates/scenes/index.html
@@ -4,18 +4,21 @@
 
 
 {% for scene in scenes %}
+<div class = "center-align">
     {% for photo in scene.photo_set.all %}
-      <img class="responsive-img card-panel" src="{{photo.url}}">
+      <img class="responsive-img card-panel card large" src="{{photo.url}}">
     {% empty %}
       <div class="card-panel teal-text center-align">No Photos Uploaded</div>
     {% endfor %}
+</div>
     <div class="card">
             <a href="{% url 'detail' scene.id %}">
             <div class="card-content">
-                <span class="card-title"> {{ scene.location }}</span>
+                <span class="card-title"><h3> {{ scene.location }} </h3> </span>
                 <p>Description: {{ scene.description }}</p>
             </div>
         </a>
     </div>
+
 {% endfor %}
 {% endblock %}
