--- a/HackathonGAmechangers/main_app/templates/base.html
+++ b/HackathonGAmechangers/main_app/templates/base.html
@@ -22,7 +22,7 @@
                 {% if user.is_authenticated %}
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="{% url 'profile' %}">profile</a></li>
-                <li><a href="{% url 'logout' %} ">logout</a></li>
+                <li><a href="{% url 'logout' %}?next={% url 'home' %} ">logout</a></li>
                 <li><a href="{% url 'index' %}">Scenes</a></li>
                 <li><a href="{% url 'scenes_create' %}">Create</a></li>
                 </ul>
