--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -1,7 +1,27 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Welcome to Texas Street Art!</h1>
-<h1>Profile</h1>
+<h1>{{ user.username }}</h1>
 
+{% for scene in scenes %}
+
+
+
+<div class = "center-align">
+    {% for photo in scene.photo_set.all %}
+      <img class="responsive-img card-panel card large" src="{{photo.url}}">
+    {% empty %}
+      <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+    {% endfor %}
+</div>
+    <div class="card">
+            <a href="{% url 'detail' scene.id %}">
+            <div class="card-content">
+                <span class="card-title"><h3> {{ scene.location }} </h3> </span>
+                <p>Description: {{ scene.description }}</p>
+            </div>
+        </a>
+    </div>
+
+{% endfor %}
 {% endblock %}
