--- a/main_app/templates/scenes/index.html
+++ b/main_app/templates/scenes/index.html
@@ -17,7 +17,7 @@
             <a href="{% url 'detail' scene.id %}">
             <div class="card-content">
               
-                <b><div class="card-title"><b>{{ scene.location }}</b></div></b>
+                <b><div class="card-title"><b>{{ scene.location }} <br> {{ scene.user }}</b></div></b>
                 <br>
                 <br>
                 <br>
