--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,7 +18,7 @@
     
         <nav class="nav-wraper black">
                 <!-- changes below -->
-                <a href="#" class="brand-logo"> AUSTIN STREET SCENES</a>
+                <a href="{% url 'index' %}" class="brand-logo"> AUSTIN STREET SCENES</a>
                 {% if user.is_authenticated %}
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
 
