--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,29 +20,21 @@
                 <!-- changes below -->
                 <a href="{% url 'index' %}" class="brand-logo"> AUSTIN STREET SCENES</a>
                 {% if user.is_authenticated %}
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-
-                <li><a href="{% url 'index' %}">Scenes</a></li>
+                <ul id="nav-mobile" class="right ">
+                <li class="hide-on-med-and-down"><a href="{% url 'index' %}">Scenes</a></li>
                 <li><a href="{% url 'scenes_create' %}">Create</a></li>
                 <li><a href="{% url 'myposts_list' %}">Profile</a></li>
-                <li><a href="{% url 'logout' %}?next={% url 'home' %} ">logout</a></li>
-                </ul>
-                <ul id="nav-mobile" class="hide-on-large-only">
-                <li><a href="{% url 'myposts_list' %}">Profile</a></li>
-                <li><a href="{% url 'scenes_create' %}">Create</a></li>
+                <li class="hide-on-med-and-down"><a href="{% url 'logout' %}?next={% url 'home' %} ">logout</a></li>
+                
+     
 
-                <li class=""><a href="{% url 'logout' %}?next={% url 'home' %} ">logout</
-                </ul>
+       
                 {% else %}
-                <ul id ="nav-mobile" class="right hide-on-med-and-down">
+                <ul id ="nav-mobile" class="right">
                 <li><a href="{% url 'login' %}">Log In</a></li>
                 <li><a href="{% url 'signup' %}">Signup</a></li> 
-                <li><a href="{% url 'index' %}">Scenes</a></li>
-                </ul>
-                <ul id="nav-mobile" class="hide-on-large-only">
-                <li><a href="{% url 'signup' %}">Signup</a></li> 
-                <li><a href="{% url 'login' %}">Log In</a></li>
 
+                </ul>
                 </ul>
                 {% endif %}
             </nav>
