--- a/main_app/templates/myposts.html
+++ b/main_app/templates/myposts.html
@@ -2,17 +2,14 @@
 {% block content %}
 
 
-<div class="col s12 m7">
+<div class=" m7">
 
   <div class="card horizontal">
     <div class="card-image">
-      <img src="https://lorempixel.com/100/190/nature/6">
     </div>
     <div class="card-stacked">
       <div class="card-content">
-        <p>{{user.username}}</p>
-      </div>
-      <div class="card-action">
+        <p>User: {{user.username}}</p>
       </div>
     </div>
   </div>
