--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -8,6 +8,24 @@
     
 
 }
+.card{
+    margin-bottom: 0px;
+}
+.card-panel{
+    padding-bottom: 0px;
+}
+.card .card-title{
+    font-weight: 600;
+    font-size: 18px;
+    font-family: 'Raleway'
+}
+.card .user-title{
+    font-weight: normal;
+    line-height: 33px;
+    font-family: 'Raleway';
+    font-size: 18px;
+    color: #1F4F57
+}
 .card-title {
     font-family: 'Raleway 800', sans-serif;
     color: #266570;
@@ -29,6 +47,7 @@
     right: 50px;
     color: black;
     font-family: 'Raleway', sans-serif;
+    font-weight: normal;
 }
 
 
