--- a/main_app/templates/scenes/detail.html
+++ b/main_app/templates/scenes/detail.html
@@ -4,24 +4,22 @@
 
 
 {% for photo in scene.photo_set.all %}
-      <img class="responsive-img card-panel" src="{{photo.url}}">
+<div class="center-align">
+      <img class="responsive-img card-panel" style="box-shadow:none; width:80%;" src="{{photo.url}}">
     {% empty %}
       <div class="card-panel teal-text center-align">No Photos Uploaded</div>
     {% endfor %}
-<form action="{% url 'add_photo' scene.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
-    {% csrf_token %}
-    <input type="file" name="photo-file">
-    <br><br>
-    <input type="submit" class="btn" value="Upload Photo">
-</form>
+  </div>
 <div class="card">
-  <div class="card-content">
-    <span class="card-title">{{ scene.location }}</span>
-    <p>Description: {{ scene.description }}</p>
+  <div class="card-content" style="margin:20px 80px 0px 80px">
+    <span class="card-title" style="font-size:25px;">{{ scene.location }}</span>
+    <div class="user-title">{{ scene.user }}</div> 
+    <div class="description" style="margin:20px 50px 20px 50px"><p>{{ scene.description }}</p></div>
   </div>
   <div class="card-action">
         <a href="{% url 'scenes_update' scene.id %}">Edit</a>
         <a href="{% url 'scenes_delete' scene.id %}">Delete</a>
       </div>
 </div>
+
 {% endblock %}
