--- a/main_app/templates/myposts.html
+++ b/main_app/templates/myposts.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
+<div class="container">
+<div class="">
 <div class=" m7">
 
   <div class="card horizontal">
@@ -14,6 +15,8 @@
     </div>
   </div>
 </div>
+</div>
+</div>
 
 {% for scene in scene_list %}
 
@@ -25,14 +28,19 @@
       <div class="card-panel teal-text center-align">No Photos Uploaded</div>
     {% endfor %}
 </div>
-    <div class="card">
-            <a href="{% url 'detail' scene.id %}">
-            <div class="card-content">
-                <span class="card-title"><h3> {{ scene.location }} </h3> </span>
-                <p>Description: {{ scene.description }}</p>
-            </div>
-        </a>
-    </div>
+<div class="container">
+
+  <div class="center-align" ></div>    
+  <div class="card">
+      <a href="{% url 'detail' scene.id %}">
+        <div class="card-content">
+          <span class="card-content"><p> {{ scene.location }} </p> </span>
+          <p class="card-content">Description: {{ scene.description }}</p>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
 
 {% endfor %}
 {% endblock %}
