--- a/main_app/templates/myposts.html
+++ b/main_app/templates/myposts.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container">
-<div class="">
+<div class="container" class="center-align">
+<div>
 <div class=" m7">
 
   <div class="card horizontal">
@@ -20,7 +20,7 @@
 
 {% for scene in scene_list %}
 
-
+<div class="container">
 <div class = "center-align">
     {% for photo in scene.photo_set.all %}
       <img class="responsive-img card-panel card large" src="{{photo.url}}">
@@ -28,19 +28,20 @@
       <div class="card-panel teal-text center-align">No Photos Uploaded</div>
     {% endfor %}
 </div>
-<div class="container">
+</div>
 
-  <div class="center-align" ></div>    
+<div class="container">
+<div class="" >   
   <div class="card">
       <a href="{% url 'detail' scene.id %}">
         <div class="card-content">
           <span class="card-content"><p> {{ scene.location }} </p> </span>
-          <p class="card-content">Description: {{ scene.description }}</p>
+          <p class="desc">Description: {{ scene.description }}</p>
+        </a>
         </div>
       </div>
-    </a>
   </div>
-</div>
+
 
 {% endfor %}
 {% endblock %}
