--- a/main_app/templates/myposts.html
+++ b/main_app/templates/myposts.html
@@ -33,11 +33,11 @@
 <div class="container">
 <div class="" >   
   <div class="card">
-      <a href="{% url 'detail' scene.id %}">
+      <a href="{% url 'detail' scene.id %}"></a>
         <div class="card-content">
           <span class="card-content"><p> {{ scene.location }} </p> </span>
           <p class="desc">Description: {{ scene.description }}</p>
-        </a>
+        
         </div>
       </div>
   </div>
