--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -1,10 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Sign up</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Sign up</button>
-  </form>
-{% endblock %}
+<h2 style="text-align: center">Sign up</h2>
+  <div class="container">
+  <div class="z-depth-3 y-depth-3 x-depth-3 grey green-text lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px; solid #EEE; card-panel hoverable">
+  
+
+        
+        <form method="post">
+          {% csrf_token %}
+          {{ form.as_ul }}
+          <div class="row"></div>
+          <button  type='submit' class='row  btn btn-small white black-text  waves-effect z-depth-1 y-depth-1 hoverable' style="text-align: center;" >Sign Up</button>
+        </form>
+        
+   
+    </div>
+  </div>
+
+
+  {% endblock %}
