--- a/main_app/templates/scenes/detail.html
+++ b/main_app/templates/scenes/detail.html
@@ -24,7 +24,7 @@
 <div class="container" style="width:70%">
 <div class="card"  style="box-shadow:none">
   <div class="card-content">
-    <div class="card-title" style="font-size:23px;">{{ scene.location }}</div>
+    <div class="card-title" style="font-size:23px;">{{ scene.location }}</div><img src="https://img.icons8.com/windows/32/000000/like.png" style="position:absolute; top:0; left:745px"><img src="https://img.icons8.com/material-outlined/24/000000/topic.png" style="position:absolute; top:4px; left:790px">
     <div class="user-title">{{ scene.user }}</div> 
     <br>
     <div class="descr" style="font-family:Raleway">
