--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,14 +18,13 @@
     
         <nav class="nav-wraper black">
                 <!-- changes below -->
-                <a href="#" class="brand-logo"> AUSTIN STREET SCENES</a>
+                <a href="/scenes/" class="brand-logo"> AUSTIN STREET SCENES</a>
                 {% if user.is_authenticated %}
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{% url 'profile' %}">profile</a></li>
-                <li><a href="{% url 'index' %}">Scenes</a></li>
-                <li><a href="{% url 'scenes_create' %}">Create</a></li>
-                <li><a href="{% url 'myposts_list' %}">My Scenes</a></li>
-                <li><a href="{% url 'logout' %}?next={% url 'home' %} ">logout</a></li>
+                <li><a href="{% url 'index' %}">scenes</a></li>
+                <li><a href="{% url 'scenes_create' %}">create</a></li>
+                <li><a href="{% url 'myposts_list' %}">profile</a></li>
+                <li><a href="{% url 'logout' %}?next={% url 'index' %} ">logout</a></li>
                 </ul>
                 {% else %}
                 <ul id ="nav-mobile" class="right hide-on-med-and-down">
