--- a/main_app/templates/scenes/index.html
+++ b/main_app/templates/scenes/index.html
@@ -17,7 +17,7 @@
             <a href="{% url 'detail' scene.id %}">
             <div class="card-content">
               
-                <b><div class="card-title">{{ scene.location }}</div>
+                <b><div class="card-title">{{ scene.location }}</div><img src="https://img.icons8.com/windows/32/000000/like.png" style="position:absolute; top:0; left:745px"><img src="https://img.icons8.com/material-outlined/24/000000/topic.png" style="position:absolute; top:4px; left:790px">
                 <div class="user-title">{{ scene.user }}</div> 
                 <br>
                 <br>
