--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,11 +20,11 @@
                 <!-- changes below -->
                 <a href="/scenes/" class="brand-logo"> AUSTIN STREET SCENES</a>
                 {% if user.is_authenticated %}
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="{% url 'index' %}">scenes</a></li>
+                <ul id="nav-mobile" >
+                <li class="right hide-on-med-and-down"><a href="{% url 'index' %}">scenes</a></li>
                 <li><a href="{% url 'scenes_create' %}">create</a></li>
                 <li><a href="{% url 'myposts_list' %}">profile</a></li>
-                <li><a href="{% url 'logout' %}?next={% url 'index' %} ">logout</a></li>
+                <li class="right hide-on-med-and-down"><a href="{% url 'logout' %}?next={% url 'index' %} ">logout</a></li>
                 </ul>
                 {% else %}
                 <ul id ="nav-mobile" class="right">
