--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,7 +20,7 @@
                 <!-- changes below -->
                 <a href="/scenes/" class="brand-logo"> AUSTIN STREET SCENES</a>
                 {% if user.is_authenticated %}
-                <ul id="nav-mobile" >
+                <ul id="nav-mobile" class="right">
                 <li class="right hide-on-med-and-down"><a href="{% url 'index' %}">scenes</a></li>
                 <li><a href="{% url 'scenes_create' %}">create</a></li>
                 <li><a href="{% url 'myposts_list' %}">profile</a></li>
